--- a/DockerfileJupyter
+++ b/DockerfileJupyter
@@ -4,7 +4,8 @@
 
 # Use base system for cleaning up wayward processes
 ARG LEAN_TAG=latest
-FROM quantconnect/lean:$LEAN_TAG
+# FROM quantconnect/lean:$LEAN_TAG
+FROM leanlocal:0.1
 
 MAINTAINER QuantConnect <contact@quantconnect.com>
 
